Add gridLayout styles

--- a/src/_includes/components/image-renderer.njk
+++ b/src/_includes/components/image-renderer.njk
@@ -8,9 +8,9 @@ placeholder image with the thumbnail and changes opacity of the blur overlay. -#
 ></div>
 <img
   alt="{{ imgObj.altText or imgObj.title or 'Description not available' }}"
-  class="{{ placeholderClasses or 'max-h-full min-h-full min-w-full max-w-full object-cover' }}"
+  class="{{ placeholderClasses or 'max-h-full min-h-full min-w-full max-w-full' }}"
   src="{{ imgObj.lqip }}"
-  style="aspect-ratio: {{ imgObj.aspectRatio }}"
+  style="aspect-ratio: {{ aspectRatio or imgObj.aspectRatio | round(2) }}"
 />
 <img
   alt="{{ imgObj.altText or imgObj.title or 'Description not available' }}"
