--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,7 +6,7 @@
 
 /* avoid stretching the image too much on portrait screens */
 @media screen and (min-aspect-ratio: 0.75) and (max-aspect-ratio: 1.3) {
-  .image-container {
+  .restrict-image-width {
     /* gap.grid is set in tailwind.config.js */
     max-width: calc(
       (100% / 2) - calc(theme("gap.grid") - theme("gap.grid") / 2)
@@ -17,7 +17,7 @@
 
 /* avoid stretching the image too much on larger landscape screens */
 @media screen and (min-aspect-ratio: 1.4) {
-  .image-container {
+  .restrict-image-width {
     max-width: calc(
       (100% / 3) - calc(theme("gap.grid") - theme("gap.grid") / 3)
     ) !important;
