--- a/src/404.njk
+++ b/src/404.njk
@@ -5,13 +5,8 @@ eleventyComputed:
   title: 404 | {{ config.metadata.title }}
 ---
 
-{%- if config.ui.colorPreference == "dark" -%}
-  {%- set textPrimary = "text-white" -%}
-{%- elif config.ui.colorPreference == "light" -%}
-  {%- set textPrimary = "text-black" -%}
-{%- else -%}
-  {%- set textPrimary = "text-black dark:text-white" -%}
-{%- endif -%}
+{%- set textPrimary = "text-white" if config.ui.colorPreference == "dark" else ("text-black" if config.ui.colorPreference == "light" else "text-black dark:text-white") -%}
+
 <main class="h-screen flex items-center justify-center justify-self-center">
   <div class="">
     <p class="text-center text-lg font-medium {{ textPrimary }}">
@@ -20,7 +15,11 @@ eleventyComputed:
     <br />
     <p class="text-gray-500 text-center">
       Go back to the
-      <a class="hover:text-sky-500 underline cursor-pointer">home page</a>
+      <a
+        class="hover:text-sky-500 underline cursor-pointer"
+        href="{{ "/" | toRelativeUrl }}"
+        >home page</a
+      >
     </p>
   </div>
 </main>
