--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -47,6 +47,14 @@
     />
     <link rel="icon" type="image/x-icon" href="/metadata/favicon.ico" />
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
     {%- if config.app.allowIndexing == "false" -%}
       <meta name="robots" content="noindex" />
     {%- endif -%}
