--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -59,7 +59,7 @@
       <meta name="robots" content="noindex" />
     {%- endif -%}
 
-    <script type="module" src="/js/main.ts"></script>
+    <script type="module" src="/js/common.ts"></script>
   </head>
   <body
     class="{{ 'bg-gradient-to-br' if bgColors.from else bgColor }}"
