--- a/src/index.njk
+++ b/src/index.njk
@@ -31,3 +31,7 @@ layout: layouts/base.njk
     </a>
   {%- endfor -%}
 </div>
+
+{%- block js -%}
+  <script type="module" src="/js/home.ts"></script>
+{%- endblock -%}
