Improve details scroll cue

--- a/src/_includes/components/dialog-details.njk
+++ b/src/_includes/components/dialog-details.njk
@@ -55,8 +55,8 @@
 
   {%- if imgObj.description -%}
     <p
-      class="max-h-44 line-clamp-6 leading-7 {{ textColor }}"
-      onclick="(function(el){el.classList.remove('line-clamp-6');el.classList.add('overflow-scroll')})(this)"
+      class="fade-bottom max-h-[11.75rem] overflow-scroll leading-7 {{ textColor }}"
+      onscroll="(function(el){if(el.scrollHeight - el.scrollTop === el.clientHeight){el.classList.remove('fade-bottom');el.classList.add('fade-top')}else{el.classList.add('fade-bottom');el.classList.remove('fade-top')}})(this)"
     >
       {{ imgObj.description }}
     </p>
@@ -72,7 +72,7 @@
             {%- include "src/_includes/icons/aperture.njk" -%}
           </span>
           <span class="ml-2 inline-block align-text-bottom max-w-xs truncate"
-            >{{ imgObj.exif.LensMake }} {{ imgObj.exif.LensModel }}</span
+            >{{ imgObj.exif.LensModel }}</span
           >
         </div>
       {%- endif -%}
