--- a/src/_includes/components/dialog-details.njk
+++ b/src/_includes/components/dialog-details.njk
@@ -55,7 +55,7 @@
 
   {%- if imgObj.description -%}
     <p
-      class="description-text max-h-[11.75rem] overflow-scroll leading-7 {{ textColor }}"
+      class="description-text max-h-[11.75rem] overflow-scroll scroll-smooth overscroll-contain leading-7 {{ textColor }}"
     >
       {{ imgObj.description }}
     </p>
