--- a/src/_includes/components/dialog-details.njk
+++ b/src/_includes/components/dialog-details.njk
@@ -71,7 +71,7 @@
             {%- include "src/_includes/icons/aperture.njk" -%}
           </span>
           <span class="ml-2 inline-block align-text-bottom max-w-xs truncate"
-            >{{ imgObj.exif.LensModel }}</span
+            >{{ imgObj.exif.LensMake }} {{ imgObj.exif.LensModel }}</span
           >
         </div>
       {%- endif -%}
