Fix outline issue

--- a/src/_includes/components/dialog-details.njk
+++ b/src/_includes/components/dialog-details.njk
@@ -40,7 +40,7 @@
   id="dialog-details"
 >
   <button
-    class="absolute appearance-none right-0 top-0 p-4 focus-visible:outline-0 hover:text-opacity-50 {{ textColor }}"
+    class="absolute appearance-none right-0 top-0 p-4 focus-visible:outline-none hover:text-opacity-50 {{ textColor }}"
     onclick="(function(){ document.getElementById('dialog-details').close();})(this)"
     title="Close"
   >
