Improve CSS loading

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -51,9 +51,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
-      rel="stylesheet"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+    /></noscript>
 
     {%- if config.app.allowIndexing == "false" -%}
       <meta name="robots" content="noindex" />
