--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -66,6 +66,13 @@
       <meta name="robots" content="noindex" />
     {%- endif -%}
 
+    <!-- Analytics -->
+    <script
+      defer
+      data-domain="photos.keithw.me"
+      src="https://analytics.keithw.me/js/script.js"
+    ></script>
+
     <script type="module" src="/js/common.ts"></script>
   </head>
   <body
