Replace analytics script

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -68,10 +68,11 @@
 
     <!-- Analytics -->
     <script
-      defer
-      data-domain="photos.keithw.me"
-      src="https://analytics.keithw.me/js/script.js"
-    ></script>
+      src="https://beamanalytics.b-cdn.net/beam.min.js"
+      data-token="db68853e-49b1-476d-8fcd-11bd8f715dbc"
+      async
+    >
+    </script>
 
     <script type="module" src="/js/common.ts"></script>
   </head>
