Update analytics script to use new source and defer loading

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -67,10 +67,10 @@
     {%- endif -%}
 
     <!-- Analytics -->
-    <script
-      src="https://beamanalytics.b-cdn.net/beam.min.js"
-      data-token="db68853e-49b1-476d-8fcd-11bd8f715dbc"
-      async
+    <script 
+      defer 
+      src="https://analytics.keithw.me/script.js" 
+      data-website-id="9adf5ef9-cb78-4b53-ae90-c844953da061"
     >
     </script>
 
